# pytorch-course

./: .gitignore  404.html  CNAME  LICENSE  LICENSE-ASSETS  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  run_notebook_mcp.ps1  sitemap.xml
.cursor/: mcp.json
.cursor/rules/: brand-marketing-persona.mdc  brand-marketing-persona_v2.mdc  educator-guidelines.mdc  jupyter-notebook-handling.mdc  markdown_mkdocs_editing.mdc  project-description-goal.mdc  project-overview.mdc  windows-dev-environment.mdc
.github/: FUNDING.yml
.github/workflows/: mkdocs-build.yml
00-getting-started/01_hello_pytorch/: 01_hello_pytorch.ipynb  index.html
00-getting-started/google-colab-setup/: index.html
00-getting-started/linux-pytorch-installation/: index.html
00-getting-started/macos-pytorch-installation/: index.html
00-getting-started/windows-pytorch-installation/: index.html
01-tensors/00_module_1_introduction/: index.html
01-tensors/01_introduction_to_tensors/: 01_introduction_to_tensors.ipynb  index.html
01-tensors/01_tensors_intro/: index.html
01-tensors/02_tensor_manipulation/: 02_tensor_manipulation.ipynb  index.html
01-tensors/02a_tensor_manipulation/: 02a_tensor_manipulation.ipynb  index.html
01-tensors/02b_tensor_metamorphosis/: 02b_tensor_metamorphosis.ipynb  index.html
01-tensors/03_data_types_and_devices/: 03_data_types_and_devices.ipynb  index.html
01-tensors/04_tensor_math_operations/: 04_tensor_math_operations.ipynb  index.html
01-tensors/05_matrix_multiplication/: 05_matrix_multiplication.ipynb  index.html
01-tensors/06_broadcasting/: index.html
01-tensors/07_einstein_summation/: index.html
01-tensors/08_advanced_einstein_summation/: 08_advanced_einstein_summation.ipynb  index.html
01-tensors/09_autograd/: 09_autograd.ipynb  index.html
01-tensors/10_gradient_accumulation/: 10_gradient_accumulation.ipynb  index.html
02-torch-nn/00_module_2_introduction/: index.html
02-torch-nn/01_nn_module/: 01_nn_module.ipynb  index.html
02-torch-nn/02_compose_modules/: 02_compose_modules.ipynb  index.html
02-torch-nn/03_saving_weights/: index.html
02-torch-nn/04_linear_layer/: 04_linear_layer.ipynb  index.html
02-torch-nn/05_activations/: index.html
02-torch-nn/06_dropout/: index.html
assets/: custom-hero.css  torchenstein.css
brand/: course_prof_torchenstain_persona.md  course_prof_torchenstein_persona.md  torchenstein_image.md
docs/: index.md  pytorch-course-structure.md  pytorch-course-sturcture.md  pytorch_course_structure.md  robots.txt
docs/01-tensors/: .meta.yml  (+11 more)
javascripts/: mathjax.js
learning_designs/: future_ideas.md  lesson-genration-prompt.md  lesson-template.md
overrides/: home.html  main.html
pytorch-course-structure/: index.html
pytorch_course_structure/: index.html
search/: search_index.json
tools/: optimize_images.py  run_notebook_mcp.ps1  usefulll_commands.md
(+92 files in other folders)
