[tool.poetry]
name = "pytorch-course"
version = "0.1.0"
description = "The best online and free PyTorch tutorial for understanding main building blocks of modern Transformer and Diffusion based architectures."
authors = ["Krzysztof Sopyla <krzysztofsopyla@gmail.com>"] 
readme = "README.md"
license = "MIT" # Or your chosen license
repository = "https://github.com/ksopyla/pytorch-course"
homepage = "https://ksopyla.github.io/pytorch-course/"

[tool.poetry.dependencies]
python = ">=3.12"
python-dotenv = "^1.0.1"
torch = { version = ">=2.6.0", source = "pytorch" }
transformers = "^4.51.1"
rich = "^13.9.4"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"


[tool.poetry.group.dev.dependencies]
# You can add development dependencies here, e.g.:
# pytest = "^7.0"
# black = "^23.0"
# flake8 = "^6.0"
# mkdocs = "^1.5.0" 
# mkdocs-material = "^9.0.0" 
# mkdocs-jupyter = "^0.24.0" 


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 


[[tool.poetry.source]]
name = "PyPi"
priority = "primary"


# https://medium.com/decodingml/the-step-by-step-guide-on-how-to-install-pytorch-with-cuda-support-in-all-possible-ways-147b3f34085c
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"  # CUDA 12.6
priority = "explicit"